--- a/AndroidClientProject/AndroidClient/src/main/res/values/strings.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My First App</string>
+    <string name="app_name">GTMyMusic</string>
+    <string name="command_list">LIST</string>
+    <string name="command_diff">DIFF</string>
+    <string name="command_pull">PULL</string>
+    <string name="command_leave">LEAVE</string>
+    <string name="command_cap">CAP</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="action_settings">Settings</string>
